// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/page/Header renders header correctly when authenticated: Sign Out 1`] = `
<NavLink
  activeClassName="active"
  className="nav-link"
  onClick={[Function]}
  to="/logout"
>
  <Link
    aria-current={null}
    className="nav-link"
    onClick={[Function]}
    to="/logout"
  >
    <a
      aria-current={null}
      className="nav-link"
      href="/logout"
      onClick={[Function]}
    >
      Sign Out
    </a>
  </Link>
</NavLink>
`;

exports[`components/page/Header renders header correctly: Login 1`] = `
<NavLink
  activeClassName="active"
  className="nav-link"
  to="/login"
>
  <Link
    aria-current={null}
    className="nav-link"
    to="/login"
  >
    <a
      aria-current={null}
      className="nav-link"
      href="/login"
      onClick={[Function]}
    >
      Login
    </a>
  </Link>
</NavLink>
`;
